#75 Vector API SIMD for CPU quantized matmul kernels (dot-product accumulation + Q8_0 dequant), tunable row-parallel pool via SimdThreadPool